Added tags system for wires, wireless transmitters & receivers, and for blocking wireless packets blocks